tests/NormalTests/paczka1/fuzzy1/65693775.err
Error in line 1: HXld15 A971 32,4
Error in line 5: HXld15 S896 14,4
Error in line 10: ugPCHOQCN A390 34,1
Error in line 15: ugPCHOQCN A390 65,7
Error in line 23: cSa4Z S896 26,8
Error in line 35: cSa]Z A971 253,3
Error in line 33: cnTIS A971 59,3
